--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     />
   </head>
   <body>
+      <h1>摯陞數位科技面試考題 - 前端工程師 - 陳姿如</h1>
+
     <div class="container">
       <div class="test1">
         <h2>答題一</h2>
@@ -174,7 +176,7 @@
             <div class="discribe">
               <p>
                 <strong>船隊運營效率分析(2)︰</strong><br />
-                將圖標依照觀測類別分組後，可以更容易觀察數據隨時間的變化。
+                將圖標依照觀測類別分組後，可以更容易觀察相同類型的數據隨時間的變化。
               </p>
               <p>
                 <strong>潛在改進領域(2)：</strong><br />
