新增排版樣式

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div class="container">
       <div class="test1">
         <h2>答題一</h2>
-        <p></p>
-        <h3>1. 銷貨數量-時間關係圖：</h3>
-        <div class="test1-answer">
+        <div class="bg-even">
+          <h3>1. 銷貨數量-時間關係圖：</h3>
+         <div class="test1-answer">
           <div class="discribe">
             <p>
               <strong>圖表說明︰</strong><br />
@@ -45,6 +45,8 @@
           </div>
           <div class="chart-box"><div id="test1chart1"></div></div>
         </div>
+        </div>
+        <div class="bg-odd">
         <h3>2. 銷售-時間關係圖：</h3>
         <div class="test1-answer">
           <div class="discribe">
@@ -59,6 +61,8 @@
           </div>
           <div class="chart-box"><div id="test1chart2"></div></div>
         </div>
+        </div>
+        <div class="bg-even">
         <h3>3. 類別-銷量關係圖 ：</h3>
         <div class="test1-answer">
           <div class="discribe">
@@ -74,11 +78,12 @@
           </div>
           <div class="chart-box"><div id="test1chart3"></div></div>
         </div>
+        </div>
       </div>
       <div class="test2">
         <h2>答題二</h2>
 
-        <div class="test2chart1">
+        <div class="test2chart1 bg-even">
           <h3>1. 船隻燃油效率圖表：</h3>
           <p>
             <strong>圖表說明︰</strong><br />
@@ -101,7 +106,7 @@
             <div class="chart-box"><div id="chartBoatFuelEff"></div></div>
           </div>
         </div>
-        <div class="test2chart2">
+        <div class="test2chart2 bg-odd">
           <h3>2. 貨物運輸效率圖表：</h3>
           <p>
             <strong>圖表說明︰</strong><br />
@@ -126,7 +131,7 @@
             <div class="chart-box"><div id="chartCargoTsportEff"></div></div>
           </div>
         </div>
-        <div class="test2chart3">
+        <div class="test2chart3 bg-even">
           <h3>3. 綜合性能分析圖：</h3>
           <p>
             <strong>圖表說明︰</strong><br />
