--- a/index.html
+++ b/index.html
@@ -195,6 +195,6 @@
     <!-- C3 D3 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.js"></script>
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
